--- a/Storybook-Workshop/package.json
+++ b/Storybook-Workshop/package.json
@@ -24,7 +24,7 @@
     "@angular/router": "~11.2.14",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
-    "primeng": "^12.0.0-rc.1",
+    "primeng": "11.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
