--- a/Storybook-Workshop/package.json
+++ b/Storybook-Workshop/package.json
@@ -9,7 +9,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "docs:json": "compodoc -p ./tsconfig.json -e json -d .",
-    "storybook": "npm run docs:json && start-storybook -p 6006",
+    "storybook": "npm run docs:json && start-storybook -p 6006 -s src/assets",
     "build-storybook": "npm run docs:json && build-storybook"
   },
   "private": true,
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~11.2.14",
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
+    "@storybook/addon-a11y": "^6.2.9",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primeng": "11.4.2",
@@ -33,14 +34,17 @@
     "@angular-devkit/build-angular": "~0.1102.13",
     "@angular/cli": "~11.2.13",
     "@angular/compiler-cli": "~11.2.14",
+    "@angular/elements": "^12.0.3",
     "@babel/core": "^7.14.3",
     "@compodoc/compodoc": "^1.1.11",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
+    "@storybook/addon-measure": "^1.2.3",
     "@storybook/angular": "^6.2.9",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@webcomponents/custom-elements": "^1.4.3",
     "babel-loader": "^8.2.2",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
@@ -51,6 +55,8 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.5.0",
     "protractor": "~7.0.0",
+    "storybook-addon-designs": "^6.0.0",
+    "storybook-addon-pseudo-states": "^1.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
