--- a/Storybook-Workshop/package.json
+++ b/Storybook-Workshop/package.json
@@ -15,6 +15,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.14",
+    "@angular/cdk": "^12.1.0",
     "@angular/common": "~11.2.14",
     "@angular/compiler": "~11.2.14",
     "@angular/core": "~11.2.14",
@@ -22,8 +23,8 @@
     "@angular/platform-browser": "~11.2.14",
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
-    "@storybook/addon-a11y": "^6.2.9",
-    "@storybook/addon-docs": "^6.3.0",
+    "@storybook/addon-a11y": "^6.3.1",
+    "@storybook/addon-docs": "^6.3.1",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primeng": "11.4.2",
@@ -38,11 +39,11 @@
     "@angular/elements": "^12.0.3",
     "@babel/core": "^7.14.3",
     "@compodoc/compodoc": "^1.1.11",
-    "@storybook/addon-actions": "^6.2.9",
-    "@storybook/addon-essentials": "^6.2.9",
-    "@storybook/addon-links": "^6.2.9",
-    "@storybook/addon-measure": "^1.2.3",
-    "@storybook/angular": "^6.2.9",
+    "@storybook/addon-actions": "^6.3.1",
+    "@storybook/addon-essentials": "^6.3.1",
+    "@storybook/addon-links": "^6.3.1",
+    "@storybook/addon-measure": "^2.0.0",
+    "@storybook/angular": "^6.3.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "@webcomponents/custom-elements": "^1.4.3",
